--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,9 @@ inputs:
   source:
     description: 'Source directory'
     default: ''
+  content:
+    description: 'content directory'
+    default: ''
   target:
     description: 'Target directory'
     default: 'public'
